updating git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /java/UsingApacheHttpClient/target/
 /java/JsonExample/target/
 /java/Swing/FileDragNDrop/build/
+/java/ExcelFileExample/target/
+/java/JarWithResources/target/
