Adding some more Java examples

--- a/java/JarWithResources/pom.xml
+++ b/java/JarWithResources/pom.xml
@@ -23,7 +23,22 @@
                         </manifest>
                     </archive>
                 </configuration>
-            </plugin>            
+            </plugin> 
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<finalName>uber-${artifactId}-${version}</finalName>
+				</configuration>
+			</plugin>           
         </plugins>
     </build>
     <name>JarWithResources</name>
