--- a/java/PcapTest/pom.xml
+++ b/java/PcapTest/pom.xml
@@ -9,15 +9,15 @@
         <dependency>
             <groupId>org.pcap4j</groupId>
             <artifactId>pcap4j-core</artifactId>
-            <version>1.6.2</version>
+            <version>1.7.3</version>
             <type>jar</type>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.pcap4j</groupId>
             <artifactId>pcap4j-packetfactory-static</artifactId>
-            <version>1.6.2</version>
+            <version>1.7.3</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,11 +29,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.0.2</version>
                 <configuration>
                 <archive>
                 <manifest>
-                <mainClass>com.devdungeon.pcaptest.Loop</mainClass>
+                <mainClass>com.devdungeon.cookbook.pcap.Loop</mainClass>
                 </manifest>
                 </archive>
                 </configuration>
@@ -41,6 +41,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
