--- a/vscode-sample.settings.json
+++ b/vscode-sample.settings.json
@@ -1,12 +1,5 @@
 {
     "telemetry.enableTelemetry": false,
-    "markdownlint.config": {
-        "MD003": {
-            "style": "setext_with_atx"
-        }
-    },
-    "markdownlint.run": "onSave",
-    "java.home": "C:\\o\\openjdk11",
-    "workbench.colorTheme": "Visual Studio Dark",
-    "html.autoClosingTags": false
+    "workbench.colorTheme": "Solarized Dark",
+    "keyboard.dispatch": "keyCode"
 }
