--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
     "request": "^2.83.0",
     "wget": "0.0.1"
   }
