--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,10 +2,13 @@
   "name": "javascript",
   "version": "0.0.1",
   "dependencies": {
+    "bufferutil": "^4.0.5",
     "cheerio": "^1.0.0-rc.2",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "request": "^2.83.0",
+    "socket.io": "^4.4.0",
+    "utf-8-validate": "^5.0.7",
     "wget": "0.0.1"
   }
 }
