--- a/c++/cmake/CMakeLists.txt
+++ b/c++/cmake/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(SimpleExample)
 
+# Generate build files with: `cmake .`
+# Then, in Linux run: `make` with the generated Makefile
+
 # add_library(CustomFunctions custom_functions.cpp)
 # include_directories(CustomFunctions)
 # link_libraries("-static")
