--- a/c/gtk4/hello/Makefile
+++ b/c/gtk4/hello/Makefile
@@ -1,7 +1,7 @@
 all: main
 
 main: main.c
-	gcc `pkg-config --cflags gtk4` main.c `pkg-config --libs gtk4`
+	gcc `pkg-config --cflags gtk4` main2.c `pkg-config --libs gtk4`
 
 clean:
 	rm a.out
